--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.9.2",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
@@ -45,5 +46,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
