--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
@@ -12,7 +13,13 @@
     "antd": "^5.9.2",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
+    "faker": "^6.6.6",
+    "firebase": "^10.7.1",
+    "firebase-functions": "^4.5.0",
     "jwt-decode": "^3.1.2",
+    "nodemailer": "^6.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
